# modbus-simulator

./: .env.example  .gitignore  Cargo.toml  PLAN.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: behavior.rs  encoding.rs  engine.rs  lib.rs  model.rs
crates/server/: Cargo.toml
crates/server/src/: graphql.rs  http.rs  lib.rs  main.rs  persistence.rs  state.rs  supervisor.rs
crates/server/src/importers/: mod.rs  varmeco.rs
crates/server/src/transport/: mod.rs  pdu.rs  ptystream.rs  rtu.rs  semantics.rs  tcp.rs  vpty.rs
crates/server/tests/: mbpoll_rtu.rs  mbpoll_tcp.rs  rtu_integration.rs  semantics_and_activity.rs  subscription_ws.rs  tcp_integration.rs  varmeco_import.rs  vpty_create.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  schema.graphql  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/e2e/: ui-walkthrough.spec.ts
frontend/scripts/: gen-schema.js
frontend/src/: App.tsx  graphql-env.d.ts  graphql.ts  mbpollExamples.ts  queries.ts  styles.css  subscriptions.ts
frontend/src/components/: CopyButton.tsx  Modal.tsx
frontend/src/pages/: Contexts.tsx  Converter.tsx  DeviceTypes.tsx  Devices.tsx  Traffic.tsx  Transport.tsx  VirtualSerials.tsx
varmeco_csv_format/: exm_compact.csv  vc380_substation.csv  vff.csv  vfnova.csv  vfnova_kaskade.csv  vfnova_plus.csv  vsn.csv
