[workspace]
resolver = "2"
members = ["crates/core", "crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
similar_names = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
return_self_not_must_use = "allow"
checked_conversions = "allow"
assigning_clones = "allow"
approx_constant = "allow"
wildcard_imports = "allow"
enum_glob_use = "allow"
struct_field_names = "allow"
match_same_arms = "allow"
too_many_arguments = "allow"
used_underscore_binding = "allow"
ignored_unit_patterns = "allow"
unnested_or_patterns = "allow"
single_match_else = "allow"
redundant_closure_for_method_calls = "allow"
from_iter_instead_of_collect = "allow"
if_not_else = "allow"
uninlined_format_args = "allow"
bool_to_int_with_if = "allow"
needless_for_each = "allow"
manual_let_else = "allow"
default_trait_access = "allow"
option_if_let_else = "allow"
map_unwrap_or = "allow"
unreadable_literal = "allow"
redundant_else = "allow"
missing_const_for_fn = "allow"
trivially_copy_pass_by_ref = "allow"
unused_async = "allow"
useless_vec = "allow"
let_and_return = "allow"
manual_map = "allow"
redundant_clone = "allow"
inconsistent_struct_constructor = "allow"
needless_continue = "allow"
unnecessary_lazy_evaluations = "allow"
naive_bytecount = "allow"
zero_sized_map_values = "allow"
