[package]
name = "modsim-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "modsim"
path = "src/main.rs"

[dependencies]
modsim-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
rust-embed = { version = "8", features = ["include-exclude", "interpolate-folder-path"] }
mime_guess = "2"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"
tokio-serial = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "fs"] }
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
uuid = { version = "1", features = ["v4"] }
